<resources>
    <string name="app_name">报到吖</string>

    <string name="permission_request">需要获取以下权限：</string>
    <string name="network_error">请求失败，请检查你的网络</string>

    <string name="assign">确定</string>
    <string name="cancel">取消</string>
    <string name="skip">跳过</string>
    <string name="search">查询</string>
    <string name="submit">提交</string>

    <!--error-->
    <string name="null_content">null</string>
    <string name="image_show_error">加载图片失败</string>
    <string name="login_btn_error">手机号和密码不能为空</string>
    <string name="register_btn_error">昵称、手机号、验证码和密码不能为空</string>
    <string name="init_error_one">请登陆或检查您的网络</string>
    <string name="upload_avatar_error">上传头像失败</string>
    <string name="input_null_error">输入内容不能为空</string>
    <string name="search_time_error">未查询到选择时间</string>
    <string name="message_error">验证码错误</string>
    <string name="phone_error">手机号输入错误</string>
    <string name="password_null_error">密码不能为空</string>

    <!--login part-->
    <string name="login_account">账号：</string>
    <string name="login_password">密码：</string>
    <string name="login_account_notice">请输入昵称</string>
    <string name="login_phone_number">请输入手机号</string>
    <string name="login_password_notice">请输入密码</string>
    <string name="login_register">注册账号</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login">登陆</string>
    <string name="login_message">请输入验证码</string>
    <string name="change_password_success">修改密码成功</string>

    <!--main-->
    <string name="home">首页</string>
    <string name="guide">报到</string>
    <string name="mine">我的</string>

    <!--mine-->
    <string name="person_data">个人资料</string>
    <string name="admin_mode">管理员模式</string>
    <string name="setting">设置</string>
    <string name="take_photo">拍照</string>
    <string name="choice_photo">从相册中选取</string>
    <string name="nickname">昵称</string>
    <string name="school">学校</string>
    <string name="college">学院</string>
    <string name="name">姓名</string>
    <string name="id_card">身份证</string>
    <string name="dormitory">宿舍</string>
    <string name="logout">退出登录</string>
    <string name="login_out_sure">确认退出登录？</string>
    <string name="clear_cache">清理缓存</string>
    <string name="change_password">修改密码</string>
    <string name="clear_cache_success">已清空缓存</string>
    <string name="clear_cache_fail">清理失败</string>

    <!--guide-->
    <string name="guide_time">选择报到时间</string>
    <string name="select_time">选择时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="person_info">个人信息</string>
    <string name="upload_info">材料信息</string>
    <string name="guide_person">完善身份信息</string>
    <string name="guide_upload">上传材料照片</string>
    <string name="quick_guide_info">请尽快完成个人信息填写</string>
    <string name="finish_guide_info">已完成个人信息填写</string>
    <string name="guide_no">未完成报到</string>
    <string name="guide_yes">已完成报到</string>
    <string name="id_not_input">暂未填写身份证号</string>
    <string name="no_finish_info">未完善</string>
    <string name="yes_finish_info">已完善</string>
    <string name="finish_ca_input">您已完成材料上传</string>

    <!--home-->
    <string name="home_map">校内地图</string>
    <string name="show_all_guide_time">显示全部</string>

    <!--personData-->
    <string name="not_in_write">未填写</string>
    <string name="yet_in_write">已填写</string>
    <string name="nickname_input">请输入昵称</string>
    <string name="name_input">请输入姓名</string>
    <string name="id_card_input">请输入身份证号</string>
    <string name="school_select">请选择学校</string>
    <string name="college_select">请选择学院</string>
    <string name="id_not_num">身份证需为纯数字</string>
    <string name="upload_person_success">修改成功</string>

    <!--letterUser-->
    <string name="upload_info_ca">上传材料</string>
    <string name="ca_Describe">拍摄/上传您的材料证明</string>
    <string name="ca_action">点击拍摄/上传录取通知书</string>
    <string name="letter_notice">信息仅用于身份验证</string>
    <string name="upload_ca_success">上传材料成功</string>


    <!--selectDor-->
    <string name="select_dor">选择宿舍</string>
    <string name="yes_people">已有人</string>
    <string name="no_people">空</string>
    <string name="please_select_dor">请选择宿舍</string>
    <string name="select_dor_success">选择宿舍成功</string>

    <!--setting-->
    <string name="change_password_tittle">修改密码</string>

    <!--admin-->
    <string name="user_table">用户表</string>
    <string name="school_table">学校信息表</string>
    <string name="guide_table">报到表</string>
    <string name="dormitory_table">宿舍表</string>
    <string name="add_table">新增</string>
    <string name="change_table">修改</string>
    <string name="finish_change">结束</string>
    <string name="delete_success">删除成功</string>
    <string name="dormitory_select">请选择宿舍</string>
    <string name="phone_and_password_null_error">手机号或密码不能为空</string>
    <string name="add_success">新增成功</string>
    <string name="update_success">修改成功</string>
    <string name="dor_number">宿舍号</string>
    <string name="select_dor_people">选择人员</string>
    <string name="select_man">请选择人员</string>
    <string name="dor_number_error">宿舍号不能为空</string>

    <!--dialog-->
    <string name="user_nickname">昵称</string>
    <string name="user_phone">手机号</string>
    <string name="user_password">密码</string>
    <string name="user_name">姓名</string>
    <string name="user_dormitory">宿舍号</string>
    <string name="user_id_card">身份证号</string>
    <string name="user_select_school">选择学校</string>
    <string name="user_select_college">选择学院</string>

</resources>
