<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".login.LoginActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/imageView2"/>

    <EditText
            android:hint="@string/login_phone_number"
            android:theme="@style/LoginEditText"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/change_password_edit_one"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:id="@+id/loginAccount"
            android:layout_marginStart="15dp" app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:hint="@string/login_password_notice"
            android:theme="@style/LoginEditText"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:id="@+id/loginPassword"
            android:inputType="textPassword"
            android:background="@drawable/change_password_edit_two"
            app:layout_constraintTop_toBottomOf="@+id/loginAccount" android:layout_marginTop="1dp"
            app:layout_constraintStart_toStartOf="@+id/loginAccount"
            app:layout_constraintEnd_toEndOf="@+id/loginAccount"/>


    <TextView
            android:id="@+id/loginRegister"
            android:textSize="14sp"
            android:textColor="@color/loginMain"
            android:text="@string/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword"
            app:layout_constraintStart_toStartOf="@+id/loginPassword"/>


    <TextView
            android:id="@+id/loginForgetPassword"
            android:textSize="14sp"
            android:textColor="@color/loginMain"
            android:text="@string/login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/loginRegister"
            app:layout_constraintBottom_toBottomOf="@+id/loginRegister"
            app:layout_constraintEnd_toEndOf="@+id/loginPassword"/>
    <TextView
            android:id="@+id/loginBtn"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/login_button"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="@+id/loginRegister"
            app:layout_constraintEnd_toEndOf="@+id/loginForgetPassword"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>