<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".mine.ChangePasswordActivity">

    <include layout="@layout/base_toolbar" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/include4"/>


    <EditText
            android:id="@+id/editCPPhoneNumber"
            android:background="@drawable/change_password_edit_one"
            android:layout_width="0dp"
            android:inputType="number"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:hint="@string/login_phone_number"
            android:layout_height="60dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/include4" tools:ignore="TextFields"/>

    <EditText
            android:id="@+id/editCPMessage"
            android:inputType="number"
            android:background="@drawable/change_password_edit_three"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:hint="@string/login_message"
            app:layout_constraintStart_toStartOf="@+id/editCPPhoneNumber"
            app:layout_constraintEnd_toEndOf="@+id/editCPPhoneNumber" android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/editCPPhoneNumber"/>

    <EditText
            android:id="@+id/editCPPassword"
            android:background="@drawable/change_password_edit_two"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:hint="@string/login_password_notice"
            app:layout_constraintStart_toStartOf="@+id/editCPMessage"
            app:layout_constraintEnd_toEndOf="@+id/editCPMessage"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/editCPMessage"/>

    <Button
            android:id="@+id/btnCPAssign"
            android:layout_width="0dp"
            android:background="@drawable/change_password_btn"
            android:layout_height="60dp"
            android:textColor="@color/change_password_btn"
            android:text="@string/assign"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"/>


    <com.example.schoolguide.mineView.CountdownButton
            android:id="@+id/btnCPGetMessage"
            android:background="@drawable/change_password_message"
            android:layout_width="80dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="@+id/editCPMessage" android:layout_marginEnd="5dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/editCPMessage"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/editCPPassword"/>


</android.support.constraint.ConstraintLayout>