<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".guide.LetterUserActivity">

    <include layout="@layout/base_toolbar" android:id="@+id/include2"/>


    <ImageView
            android:id="@+id/imageViewLetterBG"
            android:background="@color/more_light_white"
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/textViewDescribe"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/ca_Describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/include2"/>

    <ImageView
            android:id="@+id/imageViewUploadCA"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:background="@drawable/dialog_bg"
            app:layout_constraintStart_toStartOf="@+id/imageViewLetterBG"
            app:layout_constraintEnd_toEndOf="@+id/imageViewLetterBG" android:layout_marginEnd="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescribe"
            android:layout_marginStart="40dp" android:layout_marginTop="40dp"/>

    <ImageView
            android:id="@+id/imageViewAddPhoto"
            android:src="@drawable/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/imageViewUploadCA"
            app:layout_constraintEnd_toEndOf="@+id/imageViewUploadCA"
            app:layout_constraintTop_toTopOf="@+id/imageViewUploadCA"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewUploadCA" android:layout_marginBottom="15dp"/>

    <TextView
            android:id="@+id/textViewAddPhotoDescribe"
            android:textSize="16sp"
            android:text="@string/ca_action"
            android:textColor="@color/more_light_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/imageViewAddPhoto"
            app:layout_constraintEnd_toEndOf="@+id/imageViewAddPhoto" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAddPhoto"/>

    <TextView
            android:id="@+id/textViewLetterNotice"
            android:text="@string/letter_notice"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewLetterBG"/>

    <ImageView
            android:id="@+id/imageViewClear"
            android:src="@drawable/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewUploadCA"
            app:layout_constraintStart_toEndOf="@+id/imageViewUploadCA" android:visibility="invisible"/>

</android.support.constraint.ConstraintLayout>