<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.RegisterActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/imageViewRegister"/>

    <ImageView
            android:src="@drawable/account_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewRegister1"
            app:layout_constraintTop_toTopOf="@+id/registerAccount"
            app:layout_constraintBottom_toBottomOf="@+id/registerAccount"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"/>

    <ImageView
            android:src="@drawable/password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/imageViewRegister1"
            app:layout_constraintEnd_toEndOf="@+id/imageViewRegister1"
            android:id="@+id/imageViewRegister2"
            app:layout_constraintTop_toTopOf="@+id/registerPassword"
            app:layout_constraintBottom_toBottomOf="@+id/registerPassword"/>
    <EditText
            android:hint="@string/login_account_notice"
            android:theme="@style/LoginEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewRegister"
            app:layout_constraintStart_toEndOf="@+id/imageViewRegister1"
            android:id="@+id/registerAccount"
            android:layout_marginStart="8dp"/>

    <EditText
            android:hint="@string/login_password_notice"
            android:theme="@style/LoginEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerPassword"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/registerAccount"
            app:layout_constraintStart_toEndOf="@+id/imageViewRegister2"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <ImageView
            android:id="@+id/registerPswShow"
            android:src="@drawable/password_unshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/registerPassword"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/registerPassword"
            app:layout_constraintBottom_toBottomOf="@+id/registerPassword" android:layout_marginBottom="4dp"/>


    <TextView
            android:id="@+id/registerBtn"
            android:text="@string/assign"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/login_button"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>