<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mine.SettingActivity">

    <include layout="@layout/base_toolbar" tools:layout_editor_absoluteY="253dp" tools:layout_editor_absoluteX="16dp"
             android:id="@+id/include"/>

    <TextView
            android:id="@+id/logout"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/login_button"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="50dp" android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/clearCache"
            android:text="@string/clear_cache"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"/>

    <ImageView
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@+id/clearCache" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView5"/>

    <TextView
            android:id="@+id/changePSW"
            android:text="@string/change_password"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@+id/changePSW" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:src="@drawable/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/clearCache"
            app:layout_constraintBottom_toBottomOf="@+id/clearCache" app:layout_constraintEnd_toEndOf="@+id/clearCache"
            android:layout_marginEnd="8dp" android:id="@+id/imageView6"/>

    <ImageView
            android:src="@drawable/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/changePSW" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/clearCache" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/changePSW" android:layout_marginEnd="8dp"/>

    <TextView
            android:id="@+id/cacheSize"
            android:textSize="12sp"
            android:textColor="@color/light_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/imageView6" android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/clearCache"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/changePSW"/>

</android.support.constraint.ConstraintLayout>